Fixed IA article list-item spacing

--- a/_sass/posts/articles/improving-the-digital-reading-experience.scss
+++ b/_sass/posts/articles/improving-the-digital-reading-experience.scss
@@ -1,5 +1,13 @@
 #improving-the-digital-reading-experience {
 
+	ul {
+		margin: $base-line-height 0;
+		li {
+			@include baseline(-1);
+			font-size: 1rem;
+		}
+	}
+
 	#js--time {
 		position: fixed;
 		top: 4rem;
